update samples